--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@primevue/themes": "^4.2.5",
     "axios": "^1.7.9",
     "pinia": "^2.3.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.5",
     "sass": "^1.83.0",
     "uuid": "^11.0.3",
